--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+
+<!-- TODO: Replace Mr. Miyamoto's name with yours -->
+<h1>The Portfolio of John Penington and Xiao-Ping Huynh</h1>
+
+<h2>Projects</h2>
+
+<!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
+<ul>
+<li><a href="http://www-personal.umich.edu/~jaldenp/WebBuild">Metroid NES (With Custom Level)</a></li>
+
+<!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
+</html>
