added controls and descriptions

--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <html>
-<h1>John Penington's Portfolio</h1>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title> Portfolio of John Penington</title>
+</head>
+<body>
+<h1>Portfolio of John Penington</h1>
 
 <h2>Projects</h2>
 
+<div class="games">
+<h3><a href="Metroid/">Metroid NES (With Custom Level). Created with Xiao-Ping Huynh</a></h4>
+<div class="description">
+<p>This is a remake of the first part of Metroid (1986) by Nintendo for the NES.
+Xiao and I also created a custom level that uses a gravity flip mechanic.
+</p> 
+<p>Controls</p>
 <ul>
-<li><a href="Metroid/">Metroid NES (With Custom Level). Created with Xiao-Ping Huynh</a></li>
-<li><a href="Roshambo/"> Roshambo - A Rock Paper Scissors Fighting Game (requires two Xbox Controllers)</a></li>
+	<li> Movement: arrow buttons</li>
+	<li> Turn into a ball (need morph powerup): down arrow</li>
+	<li> Shoot: x </li>
+	<li> Jump: z </li>
+	<li> Switch Weapons (need missile launcher): Left-shift</li>
+	<li> Flip Gravity in Custom Level (need powerup): Space </li>
+	<li> Pause Game: Enter</li>
+</ul>
+</div>
 
+<h3><a href="Roshambo/"> Roshambo</a></h4>
+<div class="description">
+	<p>
+		Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match.
+	</p>
+	<h4 class="warning">Requires two Xbox Controllers to work</h4>
+</div>
+
+</div>
+</body>
 </html>
