--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 	<p>
 		Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match.
 	</p>
-	<h4 class="warning">Requires two Xbox Controllers to work</h4>
+	<h4 class="warning">Unfortunately, this game requires two Xbox controlls to work but the WebBuild does recognize
+	plugged in devices.</h4>
 </div>
 
 </div>
