--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 	<h4 class="warning">Requires two Xbox Controllers to work</h4>
 </div>
 
+<h3><a href="Spliced/"> Spliced </a></h3>
+<div class="description">
+	<p>
+		Spliced is a 2D 2v2 fighting game where one player on each team controls
+		the upper half of a character and the other controls the bottom.
+	</p>
+</div>
+
 </div>
 </body>
 </html>
