--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -5,6 +5,37 @@
 <body>
 <h1> Spliced </h1>
 
+<div>
+	<h3>Controls (Xbox One Controller)</h3>
+	<p> 
+	Player1 - Robot Legs (aka Jet Boots)
+	    left stick= movement
+	    a = jump / jet boots
+	    x = dash left (when in air)
+	    b = dash right (when in air)
+	</p>
+	<p>   
+	Player2 - Astronaut Torso
+	    right stick = aim
+	    right-trigger = sticky grenade
+	    left-trigger = parry
+	</p>
+	<p>
+	Player3 - Astronaut Legs
+	    left stick= movement
+	    a = change gravity down
+	    x = change gravity left
+	    y = change gravity up
+	    b = change gravity right
+	</p>
+	<p>  
+	Player4 - Robot torso
+	    right stick = aim
+	    right-trigger = charge shot (hold to charge)
+	    left-trigger = parry
+	</p>
+</div>
+
 <h4><a href="Spliced_Mac/Splice.zip"> Mac Download </a></h4>
 <h4><a href="Spliced_Windows/Splice.zip"> Windows Download </a></h4>
 <h4><a href="Spliced_Unity_Assets/Spliced_Unity"> Unity Assets </a></h4>
