--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -38,6 +38,6 @@
 
 <h4><a href="Spliced_Mac/Splice.zip"> Mac Download </a></h4>
 <h4><a href="Spliced_Windows/Splice.zip"> Windows Download </a></h4>
-<h4><a href="Spliced_Unity_Assets/Spliced_Unity"> Unity Assets </a></h4>
+<h4><a href="Spliced_Unity_Assets/Spliced_Unity.zip"> Unity Assets </a></h4>
 </body>
 </html>
