added lists to controls

--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -9,35 +9,44 @@
 	<h3>Controls (Xbox One Controller)</h3>
 	<p> 
 	Player1 - Robot Legs (aka Jet Boots)
-	    left stick= movement
-	    a = jump / jet boots
-	    x = dash left (when in air)
-	    b = dash right (when in air)
+	<ul>
+	    <li> left stick= movement </li>
+	    <li> a = jump / jet boots </li>
+	    <li> x = dash left (when in air) </li>
+	    <li> b = dash right (when in air) </li>
+	</ul>
 	</p>
 	<p>   
 	Player2 - Astronaut Torso
-	    right stick = aim
-	    right-trigger = sticky grenade
-	    left-trigger = parry
+	<ul>
+	    <li> right stick = aim </li>
+	    <li> right-trigger = sticky grenade </li>
+	    <li> left-trigger = parry </li>
+	</ul>
 	</p>
 	<p>
 	Player3 - Astronaut Legs
-	    left stick= movement
-	    a = change gravity down
-	    x = change gravity left
-	    y = change gravity up
-	    b = change gravity right
+	<ul>
+	    <li> left stick= movement </li>
+	    <li> a = change gravity down </li>
+	    <li> x = change gravity left </li>
+	    <li> y = change gravity up </li>
+	    <li> b = change gravity right <li>
+	</ul>
 	</p>
 	<p>  
 	Player4 - Robot torso
-	    right stick = aim
-	    right-trigger = charge shot (hold to charge)
-	    left-trigger = parry
+	<ul>
+	    <li> right stick = aim </li>
+	    <li> right-trigger = charge shot (hold to charge) </li>
+	    <li> left-trigger = parry </li>
+	</ul>
 	</p>
 </div>
 
 <h4><a href="Spliced_Mac/Splice.zip"> Mac Download </a></h4>
 <h4><a href="Spliced_Windows/Splice.zip"> Windows Download </a></h4>
-<h4><a href="Spliced_Unity_Assets/Spliced_Unity.zip"> Unity Assets </a></h4>
+<h4><a href="Spliced_Unity_Assets/Spliced_Unity.zip"> Unity Assets </a></h4>'
+
 </body>
 </html>
