removed quote in spliced and added description

--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -46,7 +46,7 @@
 
 <h4><a href="Spliced_Mac/Splice.zip"> Mac Download </a></h4>
 <h4><a href="Spliced_Windows/Splice.zip"> Windows Download </a></h4>
-<h4><a href="Spliced_Unity_Assets/Spliced_Unity.zip"> Unity Assets </a></h4>'
+<h4><a href="Spliced_Unity_Assets/Spliced_Unity.zip"> Unity Assets </a></h4>
 
 </body>
 </html>
