--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -6,6 +6,11 @@
 <h1> Spliced </h1>
 
 <div>
+	Spliced is a 2D 2v2 fighting game where one player on each team controls
+	the upper half of a character and the other controls the bottom.
+</div>
+
+<div>
 	<h3>Controls (Xbox One Controller)</h3>
 	<p> 
 	Player1 - Robot Legs (aka Jet Boots)
