added pre-alpha note

--- a/Spliced/index.html
+++ b/Spliced/index.html
@@ -3,7 +3,7 @@
 	<title> Spliced </title>
 </head>
 <body>
-<h1> Spliced </h1>
+<h1> Spliced (Pre-Alpha)</h1>
 
 <div>
 	Spliced is a 2D 2v2 fighting game where one player on each team controls
