--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 	plugged in devices.</h4>
 </div>
 
-<h3><a href="Spliced/"> Spliced </a></h3>
+<h3><a href="Spliced/"> Spliced (Pre-Alpha) </a></h3>
 <div class="description">
 	<p>
 		Spliced is a 2D 2v2 fighting game where one player on each team controls
