download buttons for roshambo

--- a/Metroid/index.html
+++ b/Metroid/index.html
@@ -13,6 +13,7 @@
     </script>
   </head>
   <body>
+    <p> test </p>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
@@ -21,5 +22,6 @@
         <div class="title">P1 Metroid</div>
       </div>
     </div>
+    <p> test 2 </p>
   </body>
 </html>
