--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<title> Portfolio of John Penington</title>
 </head>
 <body>
@@ -26,13 +30,16 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 </ul>
 </div>
 
-<h3><a href="Roshambo/"> Roshambo</a></h4>
+<h3>Roshambo</h4>
 <div class="description">
 	<p>
-		Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match.
+		Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match. Requires two controllers to player (Xbox 360, Xbox One, and PS4 controllers work).
 	</p>
-	<h4 class="warning">Unfortunately, this game requires two Xbox controlls to work but the WebBuild does recognize
-	plugged in devices.</h4>
+</div>
+<div>
+	<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboMac.zip"> Mac Download</a></button>
+	<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboWindows.zip"> Windows Download</a></button>
+	<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboUnityProject.zip"> Unity Project Download</a></button>
 </div>
 
 <h3><a href="Spliced/"> Spliced (Pre-Alpha) </a></h3>
