--- a/Metroid/index.html
+++ b/Metroid/index.html
@@ -13,7 +13,22 @@
     </script>
   </head>
   <body>
-    <p> test </p>
+    <div>
+      <h3> Controls </h3>
+      <ul>
+        <li> Movement: arrow buttons</li>
+        <li> Turn into a ball (need morph powerup): down arrow</li>
+          <ul>
+            <li> Hint: Go left right away in Classic Level </li>
+            <li> Player starts with morph ball powerup in Custom Level</li>
+          </ul>
+        <li> Shoot: x </li>
+        <li> Jump: z </li>
+        <li> Switch Weapons (need missile launcher): Left-shift</li>
+        <li> Flip Gravity in Custom Level (need powerup): Space </li>
+        <li> Pause Game: Enter</li>
+      </ul>
+    </div>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
