--- a/Metroid/index.html
+++ b/Metroid/index.html
@@ -19,7 +19,7 @@
         <li> Movement: arrow buttons</li>
         <li> Turn into a ball (need morph powerup): down arrow</li>
           <ul>
-            <li> Hint: Go left right away in Classic Level </li>
+            <li> Hint: Go left at start in Classic Level </li>
             <li> Player starts with morph ball powerup in Custom Level</li>
           </ul>
         <li> Shoot: x </li>
