added spliced download links to indiedb

--- a/index.html
+++ b/index.html
@@ -42,14 +42,22 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 	<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboUnityProject.zip"> Unity Project Download</a></button>
 </div>
 
-<h3><a href="Spliced/"> Spliced (Pre-Alpha) </a></h3>
+<h3>Spliced (Pre-Alpha)</h3>
+<div class="downloads">
+	<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-mac-final"> Mac Download</a></button>
+	<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-windows-64bit"> Windows Download</a></button>
+</div>
 <div class="description">
 	<p>
-		Spliced is a 2D 2v2 fighting game where one player on each team controls
-		the upper half of a character and the other controls the bottom.
+		Spliced is a 2v2 ranged fighting game where one player on a team plays
+		as a fighter torso while the other player plays as the fighters legs.
+		Teamwork and communication is key as these two spliced fighters battle for ultimate glory.
+		And bragging rights. Choose from 5 distinctly different fighters and battle your friends to see who is the best.
 	</p>
 </div>
-
+<div class="trailer">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/9GjiGxaXEHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 </div>
 </body>
 </html>
