--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title> Portfolio of John Penington</title>
 </head>
 <body>
+
+<div class="content">
 <h1>Portfolio of John Penington</h1>
 
 <h2>Projects</h2>
@@ -59,6 +61,7 @@ Xiao and I also created a custom level that uses a gravity flip mechanic.
 </ul>
 </div>
 
+</div>
 </div>
 </body>
 </html>
