--- a/index.html
+++ b/index.html
@@ -10,59 +10,61 @@
 </head>
 <body>
 
-<div class="content">
-<h1>Portfolio of John Penington</h1>
-
-<h2>Projects</h2>
-
-<div class="games">
-<h3>Spliced (Pre-Alpha)</h3>
-<div class="downloads">
-	<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-mac-final"> Mac Download</a></button>
-	<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-windows-64bit"> Windows Download</a></button>
-</div>
-<div class="description">
-	<p>
-		Spliced is a 2v2 ranged fighting game where one player on a team plays
-		as a fighter torso while the other player plays as the fighters legs.
-		Teamwork and communication is key as these two spliced fighters battle for ultimate glory.
-		And bragging rights. Choose from 5 distinctly different fighters and battle your friends to see who is the best.
-	</p>
-</div>
-<div class="trailer">
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/9GjiGxaXEHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
-<h3>Roshambo</h4>
-	<div class="description">
-		<p>
-			Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match. Requires two controllers to player (Xbox 360, Xbox One, and PS4 controllers work).
-		</p>
-	</div>
-	<div>
-		<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboMac.zip"> Mac Download</a></button>
-		<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboWindows.zip"> Windows Download</a></button>
-		<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboUnityProject.zip"> Unity Project Download</a></button>
+<div class="container">
+	<div class="jumbotron">
+		<h2 class="pageTitle">Portfolio of John Penington</h2>
 	</div>
 
-<h3><a href="Metroid/">Metroid NES (With Custom Level). Created with Xiao-Ping Huynh</a></h4>
-<div class="description">
-<p>This is a remake of the first part of Metroid (1986) by Nintendo for the NES.
-Xiao and I also created a custom level that uses a gravity flip mechanic.
-</p> 
-<p>Controls</p>
-<ul>
-	<li> Movement: arrow buttons</li>
-	<li> Turn into a ball (need morph powerup): down arrow</li>
-	<li> Shoot: x </li>
-	<li> Jump: z </li>
-	<li> Switch Weapons (need missile launcher): Left-shift</li>
-	<li> Flip Gravity in Custom Level (need powerup): Space </li>
-	<li> Pause Game: Enter</li>
-</ul>
-</div>
+	<h2>Projects</h2>
 
-</div>
+	<div class="games">
+		<h3>Spliced (Pre-Alpha)</h3>
+		<div class="downloads">
+			<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-mac-final"> Mac Download</a></button>
+			<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-windows-64bit"> Windows Download</a></button>
+		</div>
+		<div class="description">
+			<p>
+				Spliced is a 2v2 ranged fighting game where one player on a team plays
+				as a fighter torso while the other player plays as the fighters legs.
+				Teamwork and communication is key as these two spliced fighters battle for ultimate glory.
+				And bragging rights. Choose from 5 distinctly different fighters and battle your friends to see who is the best.
+			</p>
+		</div>
+		<div class="trailer">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/9GjiGxaXEHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
+		<h3>Roshambo</h4>
+			<div class="description">
+				<p>
+					Roshambo is a 2D fighting game where two players try to counter each other’s attacks using the Rock-Paper-Scissors advantage triangle in order to turn their opponent’s attacks back at them. Watch out for Clashes, which are classic Rock-Paper-Scissors showdowns that can drastically alter the outcome of a match. Requires two controllers to player (Xbox 360, Xbox One, and PS4 controllers work).
+				</p>
+			</div>
+			<div>
+				<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboMac.zip"> Mac Download</a></button>
+				<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboWindows.zip"> Windows Download</a></button>
+				<button type="button" class="btn btn-link"><a href="Roshambo/RoshamboUnityProject.zip"> Unity Project Download</a></button>
+			</div>
+
+		<h3><a href="Metroid/">Metroid NES (With Custom Level). Created with Xiao-Ping Huynh</a></h4>
+		<div class="description">
+		<p>This is a remake of the first part of Metroid (1986) by Nintendo for the NES.
+		Xiao and I also created a custom level that uses a gravity flip mechanic.
+		</p> 
+		<p>Controls</p>
+		<ul>
+			<li> Movement: arrow buttons</li>
+			<li> Turn into a ball (need morph powerup): down arrow</li>
+			<li> Shoot: x </li>
+			<li> Jump: z </li>
+			<li> Switch Weapons (need missile launcher): Left-shift</li>
+			<li> Flip Gravity in Custom Level (need powerup): Space </li>
+			<li> Pause Game: Enter</li>
+		</ul>
+	</div>
+
+	</div>
 </div>
 </body>
 </html>
