--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron pageTitle">
 		<h2 class="pageTitle">Portfolio of John Penington</h2>
 	</div>
 
