--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<h2>Projects</h2>
 
 	<div class="games">
-		<h3>Spliced (Pre-Alpha)</h3>
+		<h3>Spliced</h3>
 		<div class="downloads">
 			<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-mac-final"> Mac Download</a></button>
 			<button type="button" class="btn btn-link"><a href="https://www.indiedb.com/games/spliced/downloads/spliced-windows-64bit"> Windows Download</a></button>
