--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="description">
 			<p>
 				Spliced is a 2v2 ranged fighting game where one player on a team plays
-				as a fighter torso while the other player plays as the fighters legs.
+				as a fighter's torso while the other player plays as the fighter's legs.
 				Teamwork and communication is key as these two spliced fighters battle for ultimate glory.
 				And bragging rights. Choose from 5 distinctly different fighters and battle your friends to see who is the best.
 			</p>
