--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p>
 				Spliced is a 2v2 ranged fighting game where one player on a team plays
 				as a fighter's torso while the other player plays as the fighter's legs.
-				Teamwork and communication is key as these two spliced fighters battle for ultimate glory.
+				Teamwork and communication are key as these two spliced fighters battle for ultimate glory.
 				And bragging rights. Choose from 5 distinctly different fighters and battle your friends to see who is the best.
 			</p>
 		</div>
